fix: fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@
 
 .item-image {
   border-radius: 12px;
-  margin: 4px 2px 0 2px;
+  margin: 4px 4px 0 4px;
   display: inline-block;
   object-fit: contain;
   border: dashed rgb(62, 62, 143);
@@ -171,7 +171,7 @@
 
 .item-image-selected {
   border-radius: 12px;
-  margin: 4px 0 0 4px;
+  margin: 4px 4px 0 4px;
   display: inline-block;
   object-fit: contain;
   border: solid #f0e982;
@@ -187,7 +187,7 @@
 
 .color-image {
   border-radius: 50%;
-  margin: 8px 0 0 8px;
+  margin: 6px 4px 0 4px;
   display: inline-block;
   object-fit: contain;
   border: 4px solid grey;
@@ -202,7 +202,7 @@
 
 .color-image-selected {
   border-radius: 50%;
-  margin: 8px 0 0 8px;
+  margin: 6px 4px 0 4px;
   display: inline-block;
   object-fit: contain;
   border: 4px solid white;
